crates/arrow-quiver/tests/compile_fail/unsupported_type.rs
//! A column field must be an Arrow array type.

#[derive(arrow_quiver::Quiver)]
struct Thing {
    name: String,
}

fn main() {}
